<resources>
    <string name="app_name">My Application</string>
    <string name="itemPrice">Item Price</string>
    <string name="sale">Sale%</string>
    <string name="custom">Custom%</string>
    <string name="discount">Discount</string>
    <string name="finalprice">Final Price</string>
    <string name="reset">Reset</string>
    <string name="calculate">Calculate</string>
    <string name="discountcalculator">Discount Calculator</string>
    <string name="discounttext">0.00</string>
    <string name="finalpricetext">0.00</string>
    <string name="seekbartextpercent">25%</string>
    <string name="_15">15%</string>
    <string name="_10">10%</string>
    <string name="_18">18%</string>
    <string name="custom_percentage">Custom</string>

</resources>